test/expected/define_c_int_least32_t.out
define int_least32_t as char
                        ^
25: error: "int_least32_t": "define" redefinition with different type; original is: define int_least32_t as int
